fix some scrollbar issues on Windows

--- a/src/fontra/views/fontoverview/fontoverview.css
+++ b/src/fontra/views/fontoverview/fontoverview.css
@@ -1,5 +1,5 @@
 body {
-  overflow: scroll;
+  overflow: auto;
   user-select: none;
 }
 
